lab1/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | LP error RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC
   26       | error RC

   27 StmtList: Stmt StmtList
   28         | %empty

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | error SEMI
   36     | IF LP error RP Stmt
   37     | IF LP error RP Stmt ELSE Stmt
   38     | WHILE LP error RP Stmt

   39 DefList: Def DefList
   40        | %empty

   41 Def: Specifier DecList SEMI
   42    | Specifier error SEMI

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp MINUS Exp
   53    | Exp STAR Exp
   54    | Exp DIV Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | ID LP Args RP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT
   65    | LP error RP

   66 Args: Exp COMMA Args
   67     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 21 26 35 36 37 38 42 65
INT (258) 18 63
FLOAT (259) 64
SEMI (260) 4 5 7 29 31 35 41 42
COMMA (261) 9 22 44 66
ASSIGNOP (262) 46 47
RELOP (263) 50
PLUS (264) 51
MINUS (265) 52 56
STAR (266) 53
DIV (267) 54
AND (268) 48
OR (269) 49
DOT (270) 61
NOT (271) 57
LP (272) 19 20 21 32 33 34 36 37 38 55 58 59 65
RP (273) 19 20 21 32 33 34 36 37 38 55 58 59 65
LB (274) 18 60
RB (275) 18 60
LC (276) 12 25
RC (277) 12 25 26
STRUCT (278) 12 13
RETURN (279) 31
IF (280) 32 33 36 37
ELSE (281) 33 37
WHILE (282) 34 38
TYPE (283) 10
ID (284) 14 16 17 19 20 58 59 61 62
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7, on right: 2
ExtDecList (35)
    on left: 8 9, on right: 4 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 24 41 42
StructSpecifier (37)
    on left: 12 13, on right: 11
OptTag (38)
    on left: 14 15, on right: 12
Tag (39)
    on left: 16, on right: 13
VarDec (40)
    on left: 17 18, on right: 8 9 18 24 45 46
FunDec (41)
    on left: 19 20 21, on right: 6
VarList (42)
    on left: 22 23, on right: 19 22
ParamDec (43)
    on left: 24, on right: 22 23
CompSt (44)
    on left: 25 26, on right: 6 30
StmtList (45)
    on left: 27 28, on right: 25 27
Stmt (46)
    on left: 29 30 31 32 33 34 35 36 37 38, on right: 27 32 33 34 36
    37 38
DefList (47)
    on left: 39 40, on right: 12 25 39
Def (48)
    on left: 41 42, on right: 39
DecList (49)
    on left: 43 44, on right: 41 44
Dec (50)
    on left: 45 46, on right: 43 44
Exp (51)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65, on right: 29 31 32 33 34 46 47 48 49 50 51 52 53 54 55 56 57
    60 61 66 67
Args (52)
    on left: 66 67, on right: 58 66


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 3

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    SEMI  shift, and go to state 15
    LP    shift, and go to state 16
    ID    shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 11

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

   21 FunDec: LP . error RP

    error  shift, and go to state 22


State 17

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 17 (VarDec)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 8 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 27
    LC     shift, and go to state 28

    CompSt  go to state 29


State 21

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 31
    Def              go to state 32


State 22

   21 FunDec: LP error . RP

    RP  shift, and go to state 33


State 23

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    RP      shift, and go to state 34
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 36
    ParamDec         go to state 37


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 19


State 26

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 40


State 27

   26 CompSt: error . RC

    RC  shift, and go to state 41


State 28

   25 CompSt: LC . DefList StmtList RC

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 32


State 29

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 30

   41 Def: Specifier . DecList SEMI
   42    | Specifier . error SEMI

    error  shift, and go to state 43
    ID     shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 45
    Dec      go to state 46


State 31

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 47


State 32

   39 DefList: Def . DefList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 40 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 48
    Def              go to state 32


State 33

   21 FunDec: LP error RP .

    $default  reduce using rule 21 (FunDec)


State 34

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 35

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  go to state 49


State 36

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 50


State 37

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 51

    $default  reduce using rule 23 (VarList)


State 38

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 39

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 40

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 52


State 41

   26 CompSt: error RC .

    $default  reduce using rule 26 (CompSt)


State 42

   25 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 28
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61
    ID      shift, and go to state 62

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 64
    Stmt      go to state 65
    Exp       go to state 66


State 43

   42 Def: Specifier error . SEMI

    SEMI  shift, and go to state 67


State 44

   18 VarDec: VarDec . LB INT RB
   45 Dec: VarDec .
   46    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 68
    LB        shift, and go to state 26

    $default  reduce using rule 45 (Dec)


State 45

   41 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 69


State 46

   43 DecList: Dec .
   44        | Dec . COMMA DecList

    COMMA  shift, and go to state 70

    $default  reduce using rule 43 (DecList)


State 47

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 48

   39 DefList: Def DefList .

    $default  reduce using rule 39 (DefList)


State 49

   18 VarDec: VarDec . LB INT RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 24 (ParamDec)


State 50

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 51

   22 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 71
    ParamDec         go to state 37


State 52

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 53

   26 CompSt: error . RC
   35 Stmt: error . SEMI

    SEMI  shift, and go to state 72
    RC    shift, and go to state 41


State 54

   63 Exp: INT .

    $default  reduce using rule 63 (Exp)


State 55

   64 Exp: FLOAT .

    $default  reduce using rule 64 (Exp)


State 56

   56 Exp: MINUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 73


State 57

   57 Exp: NOT . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 74


State 58

   55 Exp: LP . Exp RP
   65    | LP . error RP

    error  shift, and go to state 75
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 76


State 59

   31 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 77


State 60

   32 Stmt: IF . LP Exp RP Stmt
   33     | IF . LP Exp RP Stmt ELSE Stmt
   36     | IF . LP error RP Stmt
   37     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 78


State 61

   34 Stmt: WHILE . LP Exp RP Stmt
   38     | WHILE . LP error RP Stmt

    LP  shift, and go to state 79


State 62

   58 Exp: ID . LP Args RP
   59    | ID . LP RP
   62    | ID .

    LP  shift, and go to state 80

    $default  reduce using rule 62 (Exp)


State 63

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


State 64

   25 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 81


State 65

   27 StmtList: Stmt . StmtList

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 28
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61
    ID      shift, and go to state 62

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 82
    Stmt      go to state 65
    Exp       go to state 66


State 66

   29 Stmt: Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    SEMI      shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93


State 67

   42 Def: Specifier error SEMI .

    $default  reduce using rule 42 (Def)


State 68

   46 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 94


State 69

   41 Def: Specifier DecList SEMI .

    $default  reduce using rule 41 (Def)


State 70

   44 DecList: Dec COMMA . DecList

    ID  shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 95
    Dec      go to state 46


State 71

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


State 72

   35 Stmt: error SEMI .

    $default  reduce using rule 35 (Stmt)


State 73

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   56    | MINUS Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    STAR  shift, and go to state 88
    DIV   shift, and go to state 89
    DOT   shift, and go to state 92
    LB    shift, and go to state 93

    $default  reduce using rule 56 (Exp)


State 74

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   57    | NOT Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    DOT  shift, and go to state 92
    LB   shift, and go to state 93

    $default  reduce using rule 57 (Exp)


State 75

   65 Exp: LP error . RP

    RP  shift, and go to state 96


State 76

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   55    | LP Exp . RP
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    RP        shift, and go to state 97
    LB        shift, and go to state 93


State 77

   31 Stmt: RETURN Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    SEMI      shift, and go to state 98
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93


State 78

   32 Stmt: IF LP . Exp RP Stmt
   33     | IF LP . Exp RP Stmt ELSE Stmt
   36     | IF LP . error RP Stmt
   37     | IF LP . error RP Stmt ELSE Stmt

    error  shift, and go to state 99
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 100


State 79

   34 Stmt: WHILE LP . Exp RP Stmt
   38     | WHILE LP . error RP Stmt

    error  shift, and go to state 101
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 102


State 80

   58 Exp: ID LP . Args RP
   59    | ID LP . RP

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    RP     shift, and go to state 103
    ID     shift, and go to state 62

    Exp   go to state 104
    Args  go to state 105


State 81

   25 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 25 (CompSt)


State 82

   27 StmtList: Stmt StmtList .

    $default  reduce using rule 27 (StmtList)


State 83

   29 Stmt: Exp SEMI .

    $default  reduce using rule 29 (Stmt)


State 84

   47 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 106


State 85

   50 Exp: Exp RELOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 107


State 86

   51 Exp: Exp PLUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 108


State 87

   52 Exp: Exp MINUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 109


State 88

   53 Exp: Exp STAR . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 110


State 89

   54 Exp: Exp DIV . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 111


State 90

   48 Exp: Exp AND . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 112


State 91

   49 Exp: Exp OR . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 113


State 92

   61 Exp: Exp DOT . ID

    ID  shift, and go to state 114


State 93

   60 Exp: Exp LB . Exp RB

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 115


State 94

   46 Dec: VarDec ASSIGNOP Exp .
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93

    $default  reduce using rule 46 (Dec)


State 95

   44 DecList: Dec COMMA DecList .

    $default  reduce using rule 44 (DecList)


State 96

   65 Exp: LP error RP .

    $default  reduce using rule 65 (Exp)


State 97

   55 Exp: LP Exp RP .

    $default  reduce using rule 55 (Exp)


State 98

   31 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 31 (Stmt)


State 99

   36 Stmt: IF LP error . RP Stmt
   37     | IF LP error . RP Stmt ELSE Stmt

    RP  shift, and go to state 116


State 100

   32 Stmt: IF LP Exp . RP Stmt
   33     | IF LP Exp . RP Stmt ELSE Stmt
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    RP        shift, and go to state 117
    LB        shift, and go to state 93


State 101

   38 Stmt: WHILE LP error . RP Stmt

    RP  shift, and go to state 118


State 102

   34 Stmt: WHILE LP Exp . RP Stmt
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    RP        shift, and go to state 119
    LB        shift, and go to state 93


State 103

   59 Exp: ID LP RP .

    $default  reduce using rule 59 (Exp)


State 104

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66 Args: Exp . COMMA Args
   67     | Exp .

    COMMA     shift, and go to state 120
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93

    $default  reduce using rule 67 (Args)


State 105

   58 Exp: ID LP Args . RP

    RP  shift, and go to state 121


State 106

   47 Exp: Exp . ASSIGNOP Exp
   47    | Exp ASSIGNOP Exp .
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93

    $default  reduce using rule 47 (Exp)


State 107

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   50    | Exp RELOP Exp .
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    PLUS   shift, and go to state 86
    MINUS  shift, and go to state 87
    STAR   shift, and go to state 88
    DIV    shift, and go to state 89
    DOT    shift, and go to state 92
    LB     shift, and go to state 93

    $default  reduce using rule 50 (Exp)


State 108

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   51    | Exp PLUS Exp .
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    STAR  shift, and go to state 88
    DIV   shift, and go to state 89
    DOT   shift, and go to state 92
    LB    shift, and go to state 93

    $default  reduce using rule 51 (Exp)


State 109

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   52    | Exp MINUS Exp .
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    STAR  shift, and go to state 88
    DIV   shift, and go to state 89
    DOT   shift, and go to state 92
    LB    shift, and go to state 93

    $default  reduce using rule 52 (Exp)


State 110
